Titulos de la tabla en negrita

--- a/cv.html
+++ b/cv.html
@@ -87,10 +87,10 @@
 
         <h3>Principales campos de influencia</h3>
         
-        <table>
+        <table border="1">
             <tr>
-                <td>Campo de influencia</td>
-                <td>Aporte realizado</td>
+                <td><strong>Campo de influencia</strong></td>
+                <td><strong>Aporte realizado</strong></td>
             </tr>
             <tr>
                 <td>Sistemas operativos</td>
